--- a/test_2025_08/后端代码/spring-log-demo/src/main/resources/application.yml
+++ b/test_2025_08/后端代码/spring-log-demo/src/main/resources/application.yml
@@ -3,5 +3,10 @@ spring:
   name: spring-log-demo
 logging:
   level:
-    root: trace
-
+    root: info
+    com:
+      cya:
+        springlogdemo:
+          controller: trace
+  file:
+    name: log/log.log
