--- a/test_2025_08/后端代码/spring-log-demo/src/main/resources/application.yml
+++ b/test_2025_08/后端代码/spring-log-demo/src/main/resources/application.yml
@@ -8,5 +8,12 @@ logging:
       cya:
         springlogdemo:
           controller: trace
+          service: error
+
   file:
     name: log/log.log
+#    path: logger/log.log
+  logback:
+    rollingpolicy:
+      max-file-size: 1KB
+      file-name-pattern: ${LOG_FILE}.%d{yyyy-MM-dd}.%i
