--- a/test_2025_08/后端代码/spring-mybatis-demo/src/main/resources/application.yml
+++ b/test_2025_08/后端代码/spring-mybatis-demo/src/main/resources/application.yml
@@ -7,3 +7,6 @@ spring:
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
+mybatis:
+  configuration: # 配置打印 MyBatis⽇志
+  log-impl: org.apache.ibatis.logging.stdout.StdOutImp
