--- a/test_2025_08/后端代码/spring-mybatis-demo/src/main/resources/application.yml
+++ b/test_2025_08/后端代码/spring-mybatis-demo/src/main/resources/application.yml
@@ -10,3 +10,4 @@ spring:
 mybatis:
   configuration: # 配置打印 MyBatis⽇志
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+    map-underscore-to-camel-case: true #配置驼峰⾃动转换
