--- a/test_2025_08/后端代码/spring-mybatis-demo/pom.xml
+++ b/test_2025_08/后端代码/spring-mybatis-demo/pom.xml
@@ -39,7 +39,11 @@
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>3.0.5</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-3-starter</artifactId>
+            <version>1.2.21</version>
+        </dependency>
         <dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
