--- a/test_2025_09/后端代码/spring-blog-demo/pom.xml
+++ b/test_2025_09/后端代码/spring-blog-demo/pom.xml
@@ -70,6 +70,7 @@
             <version>0.11.5</version>
             <scope>runtime</scope>
         </dependency>
+
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-jackson</artifactId> <!-- or jjwt-gson if Gson is
@@ -78,7 +79,21 @@ preferred -->
             <scope>runtime</scope>
         </dependency>
     </dependencies>
+<profiles>
+    <profile>
+        <id>dev</id>
+        <properties>
+            <profile.name>dev</profile.name>
+        </properties>
+    </profile>
 
+    <profile>
+        <id>prod</id>
+        <properties>
+            <profile.name>prod</profile.name>
+        </properties>
+    </profile>
+</profiles>
     <build>
         <plugins>
 
