--- a/test_2025_10/forum-project/src/main/resources/application.yml
+++ b/test_2025_10/forum-project/src/main/resources/application.yml
@@ -1,4 +1,10 @@
 spring:
+  datasource:
+    url: jdbc:mysql://127.0.0.1:3306/forum_db?characterEncoding=utf8&useSSL=false
+    # 数据库连接串
+    username: root # 数据库⽤⼾名
+    password: root # 数据库密码
+    driver-class-name: com.mysql.jdbc.Driver # 数据库连接驱动
   application:
     name: l论坛系统
 server:
@@ -11,4 +17,6 @@ logging:
     com.cya.forumproject: debug
   file:
     path: D:/log/forum
+mybatis:
+  mapper-locations: classpath:mapper/**/*.xml
 
